--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@ h2{
   margin-bottom: -10px;
 }
 #mainwrapper{
-  background: lightskyblue;
+  background: #CDCDCD;
   height: 80vh;
   width: 80vw;
   max-height: 80vh;
