--- a/admin/styles.css
+++ b/admin/styles.css
@@ -20,8 +20,13 @@ h1{
   font-size: 3em;
   text-align: center;
 }
+h2, h3{
+  position: relative;
+  left: 20px;
+}
 hr{
   border: 1px solid lime;
+  width: 70%;
 }
 .centered{
   width: 200px;
@@ -37,7 +42,7 @@ hr{
   left: -190px;
   margin: auto;
 }
-.centered form input[type=button], input[type=submit], input[type=reset], input[type=password] {
+.centered form input[type=button], input[type=submit], input[type=reset], input[type=password], input[type=text] {
   font-family: monospace;
   color: lime;
   text-transform: uppercase;
@@ -81,6 +86,7 @@ hr{
   margin: auto;
   padding: 10px;
   overflow-y: scroll;
+  overflow-x: hidden;
 }
 
 ul{
