Added pricing. It's meant to be broken

--- a/styles.css
+++ b/styles.css
@@ -153,3 +153,18 @@ textarea {
   background: rgba(0,0,0,0.8);
   padding: 2px;
 }
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: black;
+  border-radius: 10px;
+}
