Added about. Ready to ship?

--- a/admin/styles.css
+++ b/admin/styles.css
@@ -87,18 +87,31 @@ hr{
   padding: 10px;
   overflow-y: scroll;
   overflow-x: hidden;
+  display: flex;
+  justify-content: space-between;
 }
-
-ul{
-  float: left;
+#intelwrapper{
+  width: 800px;
+  height: 800px;
+  max-width: 800px;
+  max-height: 800px;
+  border: 1px solid lime;
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 3vh;
+  margin: auto;
+  padding: 10px;
+  overflow-y: scroll;
+  overflow-x: hidden;
 }
-
+.floatdivs{
+  display: flex;
+  justify-content: space-between;
+}
 a {
   color: lime;
   text-decoration: none;
-}
-p{
-  margin: 0 0 0 200px;
 }
 pre{
   font-size: 4px;
