Redirect page no longer spills paragraph out

--- a/admin/styles.css
+++ b/admin/styles.css
@@ -4,15 +4,15 @@ body{
   font-family: monospace;
 }
 #loginwrapper{
-  width: 40vw;
-  height: 30vh;
-  max-width: 40vw;
-  max-height: 30vh;
+  width: 900px;
+  height: 400px;
+  /* max-width: 900px;
+  max-height: 100px; */
   border: 1px solid lime;
   position: absolute;
   left: 0;
   right: 0;
-  top: 30vh;
+  top: 300px;
   margin: auto;
 }
 h1{
@@ -36,16 +36,15 @@ hr{
   margin: auto;
 }
 .centered p{
-  width: 600px;
+  max-width: 600px;
   position: absolute;
   bottom: -180px;
-  left: -190px;
+  left: -150px;
   margin: auto;
 }
 .centered form input[type=button], input[type=submit], input[type=reset], input[type=password], input[type=text] {
   font-family: monospace;
   color: lime;
-  text-transform: uppercase;
   background: transparent;
   border: 1px solid lime;
   margin: 10px auto;
@@ -111,7 +110,7 @@ hr{
 }
 a {
   color: lime;
-  text-decoration: none;
+  text-decoration-style: dotted;
 }
 pre{
   font-size: 4px;
