--- a/styles.css
+++ b/styles.css
@@ -14,17 +14,28 @@ h2{
 }
 #mainwrapper{
   background: #CDCDCD;
-  height: 80vh;
+  height: 1000px;
   width: 80vw;
-  max-height: 80vh;
   max-width: 80vw;
   padding: 5vh 5vw;
   position: absolute;
   left:0;
   right:0;
   margin: auto;
-  overflow-y: scroll;
-  overflow-x: hidden;
+  top: 50px;
+}
+nav{
+  background: #F4F4F4; 
+  position: fixed;
+  width: 100%;
+  left: 0;
+  top: 0;
+  z-index: 100;
+  border-top: 0;
+}
+nav ul{
+  position: relative;
+  top: 10px;
 }
 nav ul li img{
   height: 24px;
@@ -101,6 +112,11 @@ nav ul li:hover{
   overflow: hidden;
   padding: 0 50px 0 0;
 }
+.abtwrapper::after {
+  content: "";
+  clear: both;
+  display: table;
+}
 hr {
   width: 50%;
   border: 1px solid black;
@@ -160,7 +176,7 @@ textarea {
 
 /* Track */
 ::-webkit-scrollbar-track {
-  background: transparent;
+  background: darkgrey;
 }
 
 /* Handle */
